syntax = "proto3";

package v2ray.core.proxy.ntp;
option csharp_namespace = "V2Ray.Core.Proxy.NTP";
option go_package = "github.com/v2fly/v2ray-core/v4/proxy/ntp";
option java_package = "com.v2ray.core.proxy.ntp";
option java_multiple_files = true;

message Config {
  uint32 user_level = 1;
}
